# BigMartSalesPrediction

./: .gitignore  DataExploration.py  EnsModel.py  LassoLRModel.py  README.md  RFModel.py  RidgeRegModel.py  main.py  pyproject.toml  submission_xgb.csv  test.py  xgbModel.py
Data/output/: RFRegressor_add_features.csv  RFRegressor_baseline.csv  ensemble_v1.csv  ensemble_v10.1.csv  ensemble_v10.2.csv  ensemble_v10.csv  ensemble_v11.1.csv  ensemble_v11.2.csv  ensemble_v11.csv  ensemble_v12.1.csv  ensemble_v12.csv  ensemble_v13.1.csv  ensemble_v13.csv  ensemble_v2.csv  ensemble_v3.csv  ensemble_v4.csv  ensemble_v5.csv  ensemble_v6.csv  ensemble_v7.csv  ensemble_v8.1.csv  ensemble_v8.csv  ensemble_v9.1.csv  ensemble_v9.csv  ensemvle_v7.1.csv  item_mapping.json  lassoLR_baseline.csv  outlet_mapping.json  processed_test_data.csv  processed_train_data.csv  submission_v1.csv  submission_v2.csv  submission_v3.csv  submission_v4.csv  submission_v5.csv  test_item_characteristics.csv  train_item_characteristics.csv  (+1 more)
DataExploration/: 02_Item_Overview.py  03_Outlet_Overview.py  04_Item_Metadata_Creation.py  06_Outlet_Metadata_Imputation.py
DataProcessing/: 01_Overall_Overview.py  05_Outlet_Metadata_Creation.py  07_DataPreProcessing.py
Scripts/: 01_Overall_Overview.py  04_Item_Metadata_Creation.py  05_Outlet_Metadata_Creation.py  08_Check_Distribution.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
models/: EnsembleModel.py  LinearRegression.py  MultiEnsembleModel.py  RFregressor_model.py  RidgeRegression.py  SimpleXGBosstModel.py  XGBRegressor_model.py
(+18 files in other folders)
