[project]
name = "bigmartsalesprediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pathlib>=1.0.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.4",
]
